syntax = "proto3";

package edu.satisf.grpcinterface;

option java_multiple_files = true;
option java_package = "edu.satisf.grpcinterface";
option java_outer_classname = "BankServiceProto";

service BankService {
  rpc commissionTransfer (TransferRequest) returns (TransferResponse){}
  rpc requestBalance (BalanceRequest) returns (BalanceResponse){}
  rpc listPastTransfers (PastTransfersRequest) returns (PastTransfersResponse){}
}

message TransferRequest {
  Transfer requestedTransfer = 1;
}

message TransferResponse {
  bool success = 1;
}

message BalanceRequest {
  string account = 1;
}

message BalanceResponse {
  float currentBalance = 1;
}

message PastTransfersRequest {
  string account = 1;
}

message PastTransfersResponse {
  repeated Transfer transfers = 1;
}

message Transfer {
  string from = 1;
  string to = 2;
  string reference = 3;
  float  amount = 4;
  Currency currency = 5;
}

enum Currency {
  EURO = 0;
  DOLLAR = 1;
}